# exml

./: .gitignore  LICENCE  README.md  main.py  pyproject.toml  requirements-test.txt  tox.ini
.github/workflow/: pymodule.yml
.github/workflows/: pymodule.yml
exml/: __init__.py  archive.py  cell.py  excel.py
exmlrd/: __init__.py  archive.py  cell.py  chart.py  excel.py  exceptions.py  log.py  sharedstyle.py  styles.py  tags.py  tools.py
exsample/: convert_json.py  get_cell.py  get_mergecell.py  get_property.py  get_sheetname.py
tests/: conftest.py  test_archive.py  test_cell.py  test_chart.py  test_classattr.py  test_delnamespace.py  test_excel.py  test_main.py  test_sharedstyle.py  test_tags.py
