[build-system]
requires = ["wheel", "setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "exml"
version = "0.0.1"
authors = [
  { name="Hayato Sonokawa", email="hsono10n1@gmail.com" },
]
description = "Package to convert csv and directories to each other."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://gitlab.com/hsono57/convoc"
"Bug Tracker" = "https://gitlab.com/hsono57/convocissues"

[tool.setuptools.packages.find]
exclude = ["tests", "data"]

[tool.mypy]
plugins = "pydantic.mypy"
ignore_missing_imports = true

[tools.pytest.ini_options]
testpaths = ["tests", ]
