[build-system]
requires = ["wheel", "setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "exmlrd"
version = "1.0.4"
authors = [
  { name="Hayato Sonokawa", email="hsono10n1@gmail.com"},
]
description = "Python module for simple reading of Excel(.xlsx)"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/sonoh5n/exml-reader"
"Bug Tracker" = "https://github.com/sonoh5n/exml-reader/issues"

[tool.setuptools.packages.find]
exclude = ["tests", "data"]

[tool.mypy]
plugins = "pydantic.mypy"
ignore_missing_imports = true

[tools.pytest.ini_options]
testpaths = ["tests", ]
